--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "redux2",
-  "version": "0.1.0",
-  "private": true,
+  "name": "Bigtincan",
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
+    "faker": "^5.5.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
